landingpage and contactus api created
